name:                ML
version:             0.1.0.0
synopsis:            A ML Proof of Concept Project
description:         Please see README.md
homepage:            https://github.com/Astral9/ML
author:              Jack Liu
maintainer:          me@thejoker.io
copyright:           2016 Jack Liu
category:            Misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , JML.Lang.Lexer
                     , JML.Lang.Parser
                     , JML.Types
                     , JML.Intepreter
                     , JML.Exceptions
                     , JML.Utils
                     , Exceptions
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.7.1
                     , mtl == 2.2.1
                     , parsec == 3.1.11
                     , transformers == 0.5.2.0
  default-language:    Haskell2010

executable ml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ML
  default-language:    Haskell2010

test-suite ml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ML
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ts
